--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		
 				<img id="profilePhoto" src="assets/images/myPhoto1.JPG" alt="myPhoto">
 
-				<p>Hi! My name is Elena Ryzhikova. Originally, I'm from Belarus. My first visit to the U.S. was in 2000. I moved here permanently in 2006. I have a Master's Degree in Journalism. Currently, I teach ESL classes at WTCC, and I'm attending the Coding Boot Camp at UNC-Chapel Hill to learn more about web development and inhance my career.</p>
+				<p>Hi! My name is Elena Ryzhikova. Originally, I'm from Belarus. My first visit to the U.S. was in 2000. I moved here 50px;permanently in 2006. I have a Master's Degree in Journalism. Currently, I teach ESL classes at WTCC, and I'm attending the Coding Boot Camp at UNC-Chapel Hill to learn more about web development and inhance my career.</p>
 				<p>My interests include running, skiing, playing tennis, traveling, and photography.</p>
 	</div>
 	
