--- a/contact.html
+++ b/contact.html
@@ -23,52 +23,52 @@
 				</nav>
 			</div>
 		</div>
-							
+		
 	</header>
 
 
 	<section id="content">
-	 <div class="wrapper">
-		<div class="main">
-			<h1>Contact</h1>
+		<div class="wrapper">
+			<div class="main">
+				<h1>Contact</h1>
 				<hr>		
-					<form>
-						<label>Name</label>
-						<input placeholder="John Smith" type="text" name="Name" />
-						<label>Email</label>
-						<input placeholder="example@gmail.com" type="text" name="Email" />
-						<label>Message</label>
-						<textarea name="Message" >
-						</textarea><br>
+				<form>
+					<label>Name</label>
+					<input placeholder="John Smith" type="text" name="Name" />
+					<label>Email</label>
+					<input placeholder="example@gmail.com" type="text" name="Email" />
+					<label>Message</label>
+					<textarea name="Message" >
+					</textarea><br>
 
-						<input id="submit" type="submit"  />
-					</form>
-				
-		</div>
-	</section>
+					<input id="submit" type="submit"  />
+				</form>
+			</div>
+			
+			<!-- </section> -->
 
-	
+			
 
 
-<aside>
-	<div class="connect">
-		<h3>Connect with Me</h3>
-			<hr>
-				<a href="https://github.com/earyzhikova" target="_blank">
-					<img class="icon" src="assets/images/git.png" alt="myGitHub"></a>
+			<aside>
+				<div class="connect">
+					<h3>Connect with Me</h3>
+					<hr>
+					<a href="https://github.com/earyzhikova" target="_blank">
+						<img class="icon" src="assets/images/git.png" alt="myGitHub"></a>
 
-				<a href="https://www.linkedin.com/feed/">
-					<img class="icon" src="assets/images/li.png" alt="mylinkedIn"></a>
+						<a href="https://www.linkedin.com/feed/">
+							<img class="icon" src="assets/images/li.png" alt="mylinkedIn"></a>
 
-				<a href="https://stackoverflow.com/users/9189530/elena" target="_blank">
-					<img class="icon" src="assets/images/stack.png" alt="mystackoverflow"></a>
-	</div>
-</aside>
-</div>	
-	
-	<footer>
-		<p id="footer"> &copy; Copyright 2018 Elena Ryzhikova</p>
-	</footer>
+							<a href="https://stackoverflow.com/users/9189530/elena" target="_blank">
+								<img class="icon" src="assets/images/stack.png" alt="mystackoverflow"></a>
+							</div>
+						</aside>
+					</div>	
+				</section>	
+				<footer>
+					<p id="footer"> &copy; Copyright 2018 Elena Ryzhikova</p>
+				</footer>
 
-</body>
-</html>
+			</body>
+			</html>
